hphp/test/slow/class-ptr/class-to-classname.php.expectf
string(1) "C"
string(1) "C"
string(1) "C"
string(1) "C"

Catchable fatal error: Argument 1 passed to HH\class_to_classname() must be an instance of HH\class_or_classname, int given in %s/class-ptr/class-to-classname.php on line 20
